--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,66 @@
 .Home{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0f0f0;
+}
+
+.title{
+    height: 15vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-color: #f0f0f0;
+}
+.title h1{
+    font-size: 2rem;
+    /* color: #333; */
+    margin: 0;
+}
+.title p{
+    font-size: 0.8rem;
+    /* color: #555; */
+    margin: 0;
+}
+.ChatContainer{
+    height: 60vh;
+    padding: 5vh;
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: top;
+    scrollbar-width: none;
+} 
+.input-container{
+    height: 15vh;
+    margin-bottom: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.input{
+    width:40vw;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px 0px 0px 5px;
+}
+.input:focus{
+    outline: none;
+    border-color:#007bff;
+}
+.input::placeholder{
+    color: rgb(61, 61, 61);
+}
+
+.send-button{
+    width: 5vw;
+    padding: 10px 0px;
+    background-color: #000;
+    color: white;
+    border: 1px solid #000;
+    border-radius: 0px 5px 5px 0px;
+    cursor: pointer;
 }
